--- a/property/export-keystore.html
+++ b/property/export-keystore.html
@@ -41,30 +41,43 @@
 		<script src="../js/jquery-2.1.1.min.js"></script>
 		<script type="text/javascript">
 			mui.init();
+			var keystore;
 			mui.plusReady(function() {
 				var self = plus.webview.currentWebview();
 				purseIndex = self.purseIndex;
 				var purseInfo = store.get('dcarPurse');
-				var keystore = purseInfo[purseIndex].keystore;
+				keystore = purseInfo[purseIndex].keystore;
 				console.log(keystore);
 				$('#keystoreBox').val(keystore);
 			});
-			// 复制地址 
-			var clipboard = new ClipboardJS('#copyKeystore');
-
-			clipboard.on('success', function(e) {
-				mui.toast('复制keystroe成功', {
-					duration: 2000,
-					type: 'div'
-				})
-			});
-
-			clipboard.on('error', function(e) {
-				mui.toast('复制失败', {
-					duration: 2000,
-					type: 'div'
-				})
-			});
+			// 复制
+			$('#copyKeystore').click(function() {
+				const el = document.createElement('input');
+				const btn = document.getElementById('copyKeystore');
+				el.value = keystore;
+				el.style.opacity = '0';
+				document.body.appendChild(el);
+				const editable = el.contentEditable;
+				const readOnly = el.readOnly;
+				el.contentEditable = true;
+				el.readOnly = false;
+				const range = document.createRange();
+				range.selectNodeContents(el);
+				const sel = window.getSelection();
+				sel.removeAllRanges();
+				sel.addRange(range);
+				el.setSelectionRange(0, 999999);
+				el.contentEditable = editable;
+				el.readOnly = readOnly;
+				const ret = document.execCommand('copy');
+				el.blur();
+				btn.text = ret;
+				if(btn.text) {
+					mui.toast('复制Keystore成功');
+				} else {
+					mui.toast('复制失败');
+				}
+			})
 		</script>
 	</body>
 
