--- a/public/login.html
+++ b/public/login.html
@@ -28,7 +28,7 @@
 				</div>
 				<div class="other_operations">
 					<p>忘记密码？</p>
-					<p class="newact" url="/public/setPassword.html">没有账号，去注册</p>
+					<p class="newact" url="/public/register.html">没有账号，去注册</p>
 				</div>
 				<button type="button" class="mui-btn mui-btn-primary cannot" id="sign">登录</button>
 			</form>
