--- a/public/setPassword.html
+++ b/public/setPassword.html
@@ -16,23 +16,23 @@
 			<h1 class="mui-title">注册</h1>
 		</header>
 		<div class="mui-content between">
-			<!--<h4>注册</h4>-->
+			<h4>填写用户信息</h4>
 			<!--<p class="limit">8-20位字符，不可以是纯数字</p>-->
 			<div class="mui-input-row info">
 				<input type="text" value="" class="mui-input-clear" placeholder="请输入用户名" id="name">
 			</div>
-			<div class="mui-input-row info">
+			<!--<div class="mui-input-row info">
 				<input type="text" value="" class="mui-input-clear" placeholder="请输入邮箱" id="email">
-			</div>
+			</div>-->
 			<div class="mui-input-row info">
 				<input type="password" value="" class="mui-input-password" placeholder="请输入密码" id="pass">
 			</div>
 			<div class="mui-input-row info">
 				<input type="password" value="" class="mui-input-password" placeholder="请再次输入密码" id="ensurePass">
 			</div>
-			<div class="mui-input-row info">
+			<!--<div class="mui-input-row info">
 				<input type="text" value="" class="mui-input-clear" placeholder="请输入邀请码（选填）">
-			</div>
+			</div>-->
 			<div class="mui-input-row mui-checkbox agreement">
 				<input name="checkbox1" id="isagree" value="Item 1" type="checkbox" checked>
 				<label>我同意<a>《用户协议》</a></label>
