--- a/public/setPassword.html
+++ b/public/setPassword.html
@@ -21,9 +21,6 @@
 			<div class="mui-input-row info">
 				<input type="text" value="" class="mui-input-clear" placeholder="请输入用户名" id="name">
 			</div>
-			<!--<div class="mui-input-row info">
-				<input type="text" value="" class="mui-input-clear" placeholder="请输入邮箱" id="email">
-			</div>-->
 			<div class="mui-input-row info">
 				<input type="password" value="" class="mui-input-password" placeholder="请输入密码" id="pass">
 			</div>
@@ -45,7 +42,9 @@
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init()
-			console.log(api)
+			var self = plus.webview.currentWebview();
+			ackId = self.ackId;
+			email = self.email;
 			$("#isagree").on("change", function() {
 				if($("#isagree").is(":checked")) {
 					$("#zhuce").removeClass("cannot")
@@ -58,10 +57,6 @@
 			$("#zhuce").on("click", function() {
 				if ($("#name").val() == "") {
 					mui.toast('用户名不能为空');
-					return false;
-				}
-				if ($("#email").val() == "") {
-					mui.toast('邮箱不能为空');
 					return false;
 				}
 				if ($("#pass").val() == "") {
@@ -82,23 +77,28 @@
 					url: api + "user",
 					data: {
 						name: $("#name").val(),
-						email: $("#email").val(),
-						password: $("#pass").val()
+						email: email,
+						password: $("#pass").val(),
+						'ackId': ackId
 					},
 					async: true,
 					success: function(ret) {
 						mui.hideLoading();
-						console.log(ret);
 						if(ret.success) {
 							mui.toast('注册成功');
 							var time = null;
 							clearTimeout(time);
 							time = setTimeout(function(){
 								plus.webview.currentWebview().close();
+								plus.webview.getWebviewById("/public/register.html").evalJS("closePage()");
 							}, 1000)
 						} else{
 							mui.toast(ret.msg);
 						}
+					},
+					error: function(error) {
+						mui.hideLoading();
+						mui.toast(error.responseJSON.msg);
 					}
 				})
 			})
