--- a/pages/mine.html
+++ b/pages/mine.html
@@ -104,6 +104,10 @@
 						} else{
 							mui.toast(ret.msg);
 						}
+					},
+					error: function(error) {
+						mui.hideLoading();
+						mui.toast(error.responseJSON.msg);
 					}
 				})
 			}
