--- a/users/userInfo.html
+++ b/users/userInfo.html
@@ -78,8 +78,11 @@
 						} else {
 							mui.toast(ret.msg)
 						}
+					},
+					error: function(error) {
+						mui.hideLoading();
+						mui.toast(error.responseJSON.msg);
 					}
-
 				});
 			};
 
