--- a/pages/home.html
+++ b/pages/home.html
@@ -60,95 +60,76 @@
 		<div class="title">
 			官方公告
 		</div>
-		<ul class="mui-table-view">
-			<li class="mui-table-view-cell mui-media" onclick="go_detail()">
-				<a href="javascript:;">
-					<img class="mui-media-object mui-pull-left" src="../img/home/list_icon.png">
-					<div class="mui-media-body">
-						<p class="list_title">
-							<span>Bithumb</span>
-							<span>2018-03-09 15:00</span>
-						</p>
-						<p class='mui-ellipsis'>比特币黄金（BTG）网络升级指南比特币黄金（BTG）网络升级指南比特币黄金（BTG）网络升级指南</p>
-					</div>
-				</a>
-			</li>
-			<li class="mui-table-view-cell mui-media" @click="show">
-				<a href="javascript:;">
-					<img class="mui-media-object mui-pull-left" src="../img/home/list_icon.png">
-					<div class="mui-media-body">
-						<p class="list_title">
-							<span>Bithumb</span>
-							<span>2018-03-09 15:00</span>
-						</p>
-						<p class='mui-ellipsis'>比特币黄金（BTG）网络升级指南比特币黄金（BTG）网络升级指南比特币黄金（BTG）网络升级指南</p>
-					</div>
-				</a>
-			</li>
-			<li class="mui-table-view-cell mui-media newact" url="/public/notice.html">
-				<a href="javascript:;">
-					<img class="mui-media-object mui-pull-left" src="../img/home/list_icon.png">
-					<div class="mui-media-body">
-						<p class="list_title">
-							<span>Bithumb</span>
-							<span>2018-03-09 15:00</span>
-						</p>
-						<p class='mui-ellipsis'>比特币黄金（BTG）网络升级指南比特币黄金（BTG）网络升级指南比特币黄金（BTG）网络升级指南</p>
-					</div>
-				</a>
-			</li>
-			<li class="mui-table-view-cell mui-media" id="login">
-				<a href="javascript:;">
-					<img class="mui-media-object mui-pull-left" src="../img/home/list_icon.png">
-					<div class="mui-media-body">
-						<p class="list_title">
-							<span>Bithumb</span>
-							<span>2018-03-09 15:00</span>
-						</p>
-						<p class='mui-ellipsis'>比特币黄金（BTG）网络升级指南</p>
-					</div>
-				</a>
-			</li>
-			<li class="mui-table-view-cell mui-media newact" url="/public/notice.html">
-				<a href="javascript:;">
-					<img class="mui-media-object mui-pull-left" src="../img/home/list_icon.png">
-					<div class="mui-media-body">
-						<p class="list_title">
-							<span>Bithumb</span>
-							<span>2018-03-09 15:00</span>
-						</p>
-						<p class='mui-ellipsis'>比特币黄金（BTG）网络升级指南</p>
-					</div>
-				</a>
-			</li>
-			<li class="mui-table-view-cell mui-media newact" url="/public/notice.html">
-				<a href="javascript:;">
-					<img class="mui-media-object mui-pull-left" src="../img/home/list_icon.png">
-					<div class="mui-media-body">
-						<p class="list_title">
-							<span>Bithumb</span>
-							<span>2018-03-09 15:00</span>
-						</p>
-						<p class='mui-ellipsis'>比特币黄金（BTG）网络升级指南</p>
-					</div>
-				</a>
-			</li>
-
-		</ul>
+		<div class="post_list" id="cart_list">
+			<!--<ul class="mui-table-view">
+				<li class="mui-table-view-cell mui-media" onclick="go_detail()">
+					<a href="javascript:;">
+						<img class="mui-media-object mui-pull-left" src="../img/home/list_icon.png">
+						<div class="mui-media-body">
+							<p class="list_title">
+								<span>Bithumb</span>
+								<span>2018-03-09 15:00</span>
+							</p>
+							<p class='mui-ellipsis'>比特币黄金（BTG）网络升级指南比特币黄金（BTG）网络升级指南比特币黄金（BTG）网络升级指南</p>
+						</div>
+					</a>
+				</li>
+			</ul>-->
+		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/vue.js"></script>
-		<!--<script src="../js/jquery-2.1.1.min.js"></script>-->
-		<!--<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>-->
-		<!--<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>-->
+		<script src="../js/jquery-2.1.1.min.js"></script>
+		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-//			var vm = new Vue({
-//				el:'#app'
-//				methods :{
-//					show() {
-//						alert('1')
-//					}
-//				}
-//			})
+			loadPostList();
+			var goods;
+			var cart_list = '';
+			// 获取公告列表
+			function loadPostList() {
+				mui.showLoading("加载中...", "div");
+				$.ajax({
+					type: "get",
+					url: api + "posts",
+					data: {},
+					async: true,
+					success: function(ret) {
+						mui.hideLoading();
+						if(ret.success) {
+							mui.toast('加载成功');
+							goods = ret.data.list;
+							if(goods.length > 0) {
+								$.each(goods, function(i, t) {
+									cart_list +=
+										'<ul class="mui-table-view">' +
+										'<li class="mui-table-view-cell mui-media" onclick="go_detail(' + i + ')">' +
+										'<a href = "javascript:;">' +
+										'<img class = "mui-media-object mui-pull-left" src = "../img/home/list_icon.png">' +
+										'<div class = "mui-media-body">' +
+										'<p class = "list_title">' +
+										'<span>' + t.title + '</span>' +
+										'<span>' + t.createdAt + '</span>' +
+										'</p>' +
+										'<p class = "mui-ellipsis">' + t.content + '</p>' +
+										'</div>' +
+										'</a>' +
+										'</li>' +
+										'</ul>'
+								})
+								console.log(cart_list)
+								$('#cart_list').html(cart_list);
+							}
+						} else {
+							mui.toast(ret.msg);
+						}
+					},
+					error: function(error) {
+						mui.hideLoading();
+						mui.toast(error.responseJSON.msg);
+					}
+				})
+			};
+
 			mui.init()
 			//预加载详情页
 			var homeDetail = mui.preload({
@@ -156,13 +137,16 @@
 				url: "../public/notice.html"
 			});
 			//打开详情页
-			function go_detail() {
+			function go_detail(num) {
 				mui.fire(homeDetail, "movieID", {
 					id: 123
 				})
 				mui.openWindow({
 					id: "notice.html",
 					url: "../public/notice.html",
+					extras: {
+						purseIndex: num
+					},
 					show: {
 						aniShow: "slide-in-right", //页面显示动画，默认为”slide-in-right“；
 					},
