--- a/users/oreManage.html
+++ b/users/oreManage.html
@@ -20,7 +20,7 @@
 		</header>
 		<div class="mui-content between">
 			<div class="miner_list">
-				<div class="miner online">
+				<!--<div class="miner online">
 					<div class="title">
 						<p class="name">矿机一</p>
 						<p class="state">在线</p>
@@ -35,8 +35,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="miner offline">
-					<div class="title">
+				<div class="miner offline">-->
+					<!--<div class="title">
 						<p class="name">矿机二</p>
 						<p class="state">离线</p>
 					</div>
@@ -49,11 +49,11 @@
 							<p>矿机地址&nbsp;&nbsp;dwsdffsafafagagdgfghdfgd</p>
 						</div>
 					</div>
-				</div>
+				</div>-->
 			</div>
 			<div class="miner_chunk">
 				<ul>
-					<li class="online">
+					<!--<li class="online">
 						<p class="name">矿机一</p>
 						<p class="state">在线</p>
 					</li>
@@ -88,7 +88,7 @@
 					<li class="online">
 						<p class="name">矿机一</p>
 						<p class="state">在线</p>
-					</li>
+					</li>-->
 				</ul>
 			</div>
 		</div>
