--- a/users/tradeRecord.html
+++ b/users/tradeRecord.html
@@ -16,7 +16,7 @@
 		    <h1 class="mui-title">交易记录</h1>
 		</header>
 		<div class="mui-content">
-			<div class="record newact" url="/users/tradeDetail.html"/>
+			<!--<div class="record newact" url="/users/tradeDetail.html"/>
 				<h5 class="time">2018-06-30 15:00</h5>
 				<div class="detail">
 					<p>20 DCAR</p>
@@ -48,7 +48,7 @@
 					<p class="sellout">卖出</p>
 					<p>≈0.22 CNY</p>
 				</div>
-			</div>
+			</div>-->
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
