--- a/users/userInfo.html
+++ b/users/userInfo.html
@@ -31,7 +31,7 @@
 				</li>
 				<li>
 					<h6>邮箱</h6>
-					<p id="email">132***@163.com</p>
+					<p id="email"></p>
 				</li>
 				<li class="newact" url="/users/alterPassword.html">
 					<h6>修改密码</h6>
