--- a/public/notice.html
+++ b/public/notice.html
@@ -12,7 +12,7 @@
 <body>
 	<header class="mui-bar mui-bar-nav">
 		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		<h1 class="mui-title"></h1>
+		<h1 class="mui-title">公告详情</h1>
 	</header>
 	<div class="mui-content">
 		<div class="notice_top">
