--- a/pages/market.html
+++ b/pages/market.html
@@ -27,26 +27,26 @@
 					<div class="public_text">ETH</div>
 				</li>
 				<li>
-					<div class="grey_text">&yen;29.55</div>
-					<div class="public_text">0.000112000</div>
+					<div class="grey_text">&yen;50</div>
+					<div class="public_text">0.03861004</div>
 				</li>
 				<li>
 					<span class="green_block">+ 39.47%</span>
 				</li>
 			</ul>
-			<ul class="market_body newact" url="/public/echarts.html">
+			<!--<ul class="market_body newact" url="/public/echarts.html">
 				<li>
 					<div class="grey_text">DCAR</div>
 					<div class="public_text">ETH</div>
 				</li>
 				<li>
-					<div class="grey_text">&yen;29.55</div>
+					<div class="grey_text">&yen;50</div>
 					<div class="public_text">0.000112000</div>
 				</li>
 				<li>
 					<span class="orange_block">- 39.47%</span>
 				</li>
-			</ul>
+			</ul>-->
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-2.1.1.min.js"></script>
