--- a/users/barcode.html
+++ b/users/barcode.html
@@ -81,7 +81,7 @@
 				// back();
 				// alert('扫描二维码成功');
 				mui.toast('扫描二维码成功',{ duration: 2000, type:'div' })
-				let time = null;
+				var time = null;
 				clearTimeout(time);
 				setTimeout(function() {
 					mui.openWindow({
