--- a/pages/home.html
+++ b/pages/home.html
@@ -124,6 +124,7 @@
 					},
 					error: function(error) {
 						mui.hideLoading();
+//						console.log(error);
 						mui.toast(error.responseJSON.msg);
 					}
 				})
