--- a/public/setPassword.html
+++ b/public/setPassword.html
@@ -6,7 +6,7 @@
 		<title>设置密码</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/style.css" />
 		<link rel="stylesheet" type="text/css" href="../css/setPassword.css" />
 	</head>
 
@@ -41,10 +41,12 @@
 		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-			mui.init()
-			var self = plus.webview.currentWebview();
-			ackId = self.ackId;
-			email = self.email;
+			mui.init();
+			mui.plusReady(function() {
+				var self = plus.webview.currentWebview();
+				ackId = self.ackId;
+				email = self.email;
+			})
 			$("#isagree").on("change", function() {
 				if($("#isagree").is(":checked")) {
 					$("#zhuce").removeClass("cannot")
@@ -55,15 +57,15 @@
 				}
 			})
 			$("#zhuce").on("click", function() {
-				if ($("#name").val() == "") {
+				if($("#name").val() == "") {
 					mui.toast('用户名不能为空');
 					return false;
 				}
-				if ($("#pass").val() == "") {
+				if($("#pass").val() == "") {
 					mui.toast('密码不能为空');
 					return false;
 				}
-				if ($("#pass").val() != $("#ensurePass").val()) {
+				if($("#pass").val() != $("#ensurePass").val()) {
 					mui.toast('两次密码不一致');
 					return false;
 				}
@@ -79,7 +81,7 @@
 						name: $("#name").val(),
 						email: email,
 						password: $("#pass").val(),
-						'ackId': ackId
+						ackId: ackId
 					},
 					async: true,
 					success: function(ret) {
@@ -88,11 +90,11 @@
 							mui.toast('注册成功');
 							var time = null;
 							clearTimeout(time);
-							time = setTimeout(function(){
+							time = setTimeout(function() {
 								plus.webview.currentWebview().close();
 								plus.webview.getWebviewById("/public/register.html").evalJS("closePage()");
 							}, 1000)
-						} else{
+						} else {
 							mui.toast(ret.msg);
 						}
 					},
