--- a/public/login.html
+++ b/public/login.html
@@ -66,6 +66,7 @@
 						mui.hideLoading();
 						if(ret.success) {
 							store.set('userInfo', ret.data);
+							console.log(store.get("userInfo").token == ret.data.token);
 							mui.toast('登录成功');
 							var tiner = null;
 							clearTimeout(tiner);
