--- a/public/forgetPassword.html
+++ b/public/forgetPassword.html
@@ -13,10 +13,10 @@
 	<body>
 		<header class="mui-bar mui-bar-nav header">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">修改密码</h1>
+		    <h1 class="mui-title">忘记密码</h1>
 		</header>
 		<div class="mui-content between">
-			<h4>修改密码</h4>
+			<h4>忘记密码</h4>
 			<div class="mui-input-row info">
 				<input type="text" value="" class="mui-input-clear" placeholder="请输入邮箱" id="email">
 			</div>
@@ -33,7 +33,7 @@
 					<input type="tel" value="" placeholder="请输入邮箱验证码" id="emailCode">
 					<a>发送</a>
 				</div>
-				<button type="button" class="mui-btn mui-btn-primary cannot newact" id="ensure" url="/users/resetPassword.html">确定</button>
+				<button type="button" class="mui-btn mui-btn-primary cannot newact" id="ensure" url="/public/resetPassword.html">确定</button>
 			</div>
 		</div>
 		<script src="../js/mui.min.js"></script>
