--- a/users/userInfo.html
+++ b/users/userInfo.html
@@ -33,7 +33,7 @@
 					<h6>邮箱</h6>
 					<p id="email"></p>
 				</li>
-				<li class="newact" url="/users/alterPassword.html">
+				<li class="newact">
 					<h6>修改密码</h6>
 					<span class="mui-icon mui-icon-arrowright"></span>
 				</li>
