--- a/public/login.html
+++ b/public/login.html
@@ -27,7 +27,7 @@
 					<input type="password" class="mui-input-password" placeholder="请输入密码" id="pass">
 				</div>
 				<div class="other_operations">
-					<p>忘记密码？</p>
+					<p class="newact" url="/public/forgetPassword.html">忘记密码？</p>
 					<p class="newact" url="/public/register.html">没有账号，去注册</p>
 				</div>
 				<button type="button" class="mui-btn mui-btn-primary cannot" id="sign">登录</button>
