--- a/public/resetPassword.html
+++ b/public/resetPassword.html
@@ -13,7 +13,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav header">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">修改密码</h1>
+		    <h1 class="mui-title">忘记密码</h1>
 		</header>
 		<div class="mui-content between">
 			<h4>重置密码</h4>
